<?xml version="1.0" encoding="utf-8"?>
<!-- Kontalk Android client
     Copyright (C) 2020 Kontalk Devteam <devteam@kontalk.org>

     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@android:id/list"
        style="?android:attr/listViewStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:drawSelectorOnTop="false"
        android:scrollbarStyle="insideOverlay"
        android:cacheColorHint="@android:color/transparent"
        android:transcriptMode="disabled"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:clipToPadding="false"
        android:descendantFocusability="afterDescendants"
        android:fadingEdgeLength="8dp"/>

    <TextView android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dip"
        android:maxLines="20"
        android:text="@string/text_conversations_empty"
        android:visibility="gone"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/action"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|end"
        android:paddingBottom="@dimen/action_button_margin"
        android:paddingRight="@dimen/action_button_margin"
        android:paddingEnd="@dimen/action_button_margin"
        app:menu_colorNormal="?colorAccent"
        app:menu_colorPressed="?colorPrimary"
        app:menu_icon="@drawable/ic_create_white"
        app:menu_fab_size="normal"
        app:menu_labels_singleLine="true"
        app:menu_labels_ellipsize="end"
        app:menu_labels_position="left"
        app:menu_backgroundColor="@color/disabled_conversations_overlay"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        tools:ignore="RtlSymmetry">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/action_compose_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu_group"
            app:fab_colorNormal="?colorAccent"
            app:fab_colorPressed="?colorPrimary"
            app:fab_label="@string/action_compose_group"
            app:fab_size="mini"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/action_compose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu_chat"
            app:fab_colorNormal="?colorAccent"
            app:fab_colorPressed="?colorPrimary"
            app:fab_label="@string/action_compose"
            app:fab_size="mini"/>

    </com.github.clans.fab.FloatingActionMenu>

</FrameLayout>
