...
                android:layout_width="48dp"
                android:layout_height="fill_parent"
                android:minHeight="48dip"
                android:contentDescription="@string/menu_smileys" />

                <EditText
                    android:id="@+id/text_editor"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:autoText="true"
                    android:capitalize="sentences"
                    android:nextFocusRight="@+id/send_button"
                    android:hint="@string/hint_enter_text"
                    android:maxLines="3"
                    android:inputType="textAutoCorrect|textCapSentences|textMultiLine"
                    android:imeOptions="actionSend|flagNoEnterAction"
                    android:background="@android:drawable/edit_text"
                    android:maxLength="2000"
...
