...

    <ImageView android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ContentDescription"/>

    <LinearLayout android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/invitation_bar"
            android:id="@+id/invitation_bar"
...
            android:background="?attr/dividerHorizontal"
            android:layout_width="match_parent"
            android:layout_height=".9dp"
            android:visibility="gone"
            tools:visibility="visible"/>

        <include android:id="@+id/composer_bar"
            layout="@layout/composer_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

...
