<?xml version="1.0" encoding="utf-8"?>
<!-- Kontalk Android client
     Copyright (C) 2020 Kontalk Devteam <devteam@kontalk.org>

     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<androidx.fragment.app.FragmentContainerView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:name="org.kontalk.ui.ConversationsFragment"
    android:id="@+id/fragment_conversation_list"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" />
