<?xml version="1.0" encoding="utf-8"?>
<!--
     Kontalk Android client
     Copyright (C) 2020 Kontalk Devteam <devteam@kontalk.org>

     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <include layout="@layout/toolbar_simple"/>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="18dip" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingBottom="10dip"
                android:gravity="center_horizontal"
                android:text="@string/number_validation_intro1" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_validation_name"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent">

                <Spinner
                    android:id="@+id/phone_cc"
                    android:background="@drawable/bg_spinner_left"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:spinnerMode="dialog" />

                <EditText
                    android:id="@+id/phone_number"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_validation_number"
                    android:inputType="phone" />
            </LinearLayout>

            <Button
                android:id="@+id/button_validate"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:onClick="validatePhone"
                android:text="@string/button_validate" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingTop="10dip"
                android:gravity="center_horizontal"
                android:text="@string/number_validation_intro2" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>
