<?xml version="1.0" encoding="utf-8"?>
<!-- Kontalk Android client
     Copyright (C) 2020 Kontalk Devteam <devteam@kontalk.org>

     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_settings" android:title="@string/menu_settings" android:icon="@drawable/ic_menu_preferences" app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_import_key" android:title="@string/menu_import_key" android:icon="@drawable/ic_menu_key" app:showAsAction="never"/>
    <item android:id="@+id/menu_import_device" android:title="@string/menu_import_device" android:icon="@drawable/ic_menu_key" app:showAsAction="never"/>
    <!-- displayed only on debug -->
    <!--item android:id="@+id/menu_manual_verification" android:title="@string/menu_manual_verification" android:icon="@android:drawable/ic_menu_more" app:showAsAction="never" /-->
    <item android:id="@+id/menu_import_messages_database" android:title="@string/menu_import_messages" android:icon="@android:drawable/ic_menu_upload" app:showAsAction="never"/>
</menu>
